--- a/config.yaml
+++ b/config.yaml
@@ -15,3 +15,7 @@ options:
           type: string
           default: 'cluster'
           description: 'The password used to connect to Carte.'
+    run_carte:
+          type: boolean
+          default: true
+          description: 'Run the Carte server for remote execution of PDI jobs'
